--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "typescript": "^5.3.3",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.23",
     "postcss": "^8.4.32",
